fix(datagrid): align column header vertically
align column title with sort icon

--- a/src/clr-angular/data/datagrid/_datagrid.clarity.scss
+++ b/src/clr-angular/data/datagrid/_datagrid.clarity.scss
@@ -814,7 +814,7 @@
         @include css-var(color, clr-table-font-color, $clr-table-font-color, $clr-use-custom-properties);
         text-align: left;
         flex: 1 1 auto;
-        align-items: baseline;
+        align-items: center;
         align-self: center;
         display: flex;
 
